--- a/app/src/main/res/layout/activity_singleton.xml
+++ b/app/src/main/res/layout/activity_singleton.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SingletonPractice.models.SingletonActivity">
+    tools:context=".SingletonPractice.SingletonActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
